--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="overlay-text visible">
 			Click to start
 		</div>
-		<div id="victory-text" class="overlay-text">
+		<div id="victory-text" class="overlay-text farmstyle">
 			VICTORY
 			<span class="overlay-text-small">Click to restart</span>
 		</div>
